fix z-index issue with page titles and dropdowns

--- a/wp-content/themes/freshenergy/less/child.less
+++ b/wp-content/themes/freshenergy/less/child.less
@@ -405,7 +405,7 @@ img.header_img {
 		    top: 44%;
 		    left: 50%;
 		    .translate-both;
-		    z-index: 4;
+		    z-index: 0;
 		}
 	}
 	.archive-description {
